nav should have links to recent posts and categories

--- a/css/grid.css
+++ b/css/grid.css
@@ -5,7 +5,8 @@ body {
 .container {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 150px 600px 300px 150px;
+    grid-auto-rows: minmax(150px, auto);
+    /* grid-template-rows: 150px 600px 300px 150px; */
     grid-template-areas:
     "hd"
     "sd"
