--- a/css/content.css
+++ b/css/content.css
@@ -1,3 +1,4 @@
+/* header styles */
 header {
     background: #fffff8;
     font-size:27px;
@@ -9,4 +10,25 @@ header {
     background-size: cover;
     background-position: center center;
     justify-content: flex-end;
+}
+
+.header h1 {
+    font-size: 100%;
+    margin: 0;
+}
+
+
+/* sidebar styles */
+.sidebar nav {
+    padding: 0 5% 0 5%;
+}
+.sidebar nav ol {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+}
+
+.sidebar nav h2 {
+    font-size: 100%;
+    margin: 0;
 }
