--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,16 +1,43 @@
 /* Medium Screens */
-@media (min-width: 601px) {
+@media (min-width: 601px) and (max-width: 950px) {
     .container {
         display: grid;
         grid-template-columns: repeat(8, 1fr);
-        grid-template-rows: minmax(150px, auto);
+        grid-template-rows: minmax(100px, auto);
         grid-template-areas:
-        "hd hd hd hd hd hd hd hd"
         "sd sd sd main main main main main"
         "ft ft ft ft ft ft ft ft";
     }
 
-    .header {
-        height: 200px;
+    #header {
+        background-image: url("../images/sunset-wide.jpg");
     }
+
+}
+
+/* Large Screens */
+@media (min-width: 951px) {
+    body {
+        display: grid;
+        grid-template-columns: 100px 1fr 100px;
+        grid-auto-rows: 150px auto;
+        grid-template-areas:
+        "header header header"
+        "na1 content na2";
+    }
+    .container {
+        display: grid;
+        width: 100%;
+        margin: auto;
+        grid-template-columns: repeat(8, 1fr);
+        grid-template-rows: minmax(100px, auto);
+        grid-template-areas:
+        "sd sd sd main main main main main"
+        "ft ft ft ft ft ft ft ft";
+    }
+
+    #header {
+        background-image: url("../images/sunset-wide.jpg");
+    }
+
 }
