footer and header should have border

--- a/css/content.css
+++ b/css/content.css
@@ -8,6 +8,7 @@
     background-size: cover;
     background-position: center center;
     justify-content: flex-end;
+    border-bottom: 3px solid #444;
 }
 
 .blogTitle {
@@ -27,6 +28,7 @@
 
 .sidebar {
     padding: 20px;
+    border-right: 3px solid #444;
     align-items: start;
     justify-content: start;
 }
@@ -131,7 +133,7 @@
  */
 .footer {
     align-items: center;
-    border-top: 3px solid green;
+    border-top: 3px solid #444;
 }
 
 .follow {
