--- a/css/responsive.css
+++ b/css/responsive.css
@@ -13,6 +13,10 @@
         background-image: url("../images/sunset-wide.jpg");
     }
 
+    .blogTitle {
+        font-size: 40px;
+    }
+
 }
 
 /* Large Screens */
@@ -25,6 +29,7 @@
         "header header header"
         "na1 content na2";
     }
+
     .container {
         display: grid;
         width: 100%;
@@ -38,6 +43,10 @@
 
     #header {
         background-image: url("../images/sunset-wide.jpg");
+    }
+
+    .blogTitle {
+        font-size: 40px;
     }
 
 }
